trunk/Archive2/01/b06f3c3e38ff79/output
main.cpp: In function 'int main()':
main.cpp:20:50: error: 'dog_lover' was not declared in this scope
  auto it = find_if(people.begin(), people.end(), dog_lover);
                                                  ^
main.cpp:21:50: error: 'dog_lover' is not a member of 'person'
  auto it = find_if(people.begin(), people.end(), person::dog_lover);
                                                  ^
